
* XINS/Java Server Framework:
  - Logging warning if the current XINS version is not a production release.
  - Added test for the _GetStatistics meta function.
  - Clear the list of manageable object when deinitializing the API as
    the manageable object are added during the initialisation.

* XINS/Java Client Framework:
  - Fixed parsing problem of when a result had a data section.

* Build and release process:
  - Fixed incorrect URL in the README.html.
  - Added the Jetty XML files to start the other demos.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.209:                                (1.0.0-beta2)

* XINS/Java Server Framework:
  - Cleaned up and improved Logdoc.
  - Fixed SF.net bug #1042113. Function without input parameters no longer
    generates a NullPointerException. This bug has been in XINS since version
    0.207.
  - Fixed SF.net bug #1049146. The recognition of the hostname on the local
    machine has now been improved.
  - Fixed SF.net bug #1049149. The 'bootstrapped' message is now only printed
    once when the framework is bootstrapped (during the initialization of the
    servlet).
  - Fixed SF.net bug #1049162. APIServlet now allows the state to change from
    READY to INITIALIZING_API. This bug has been in XINS since XINS 0.207.
  - Fixed bug. The context identifier uses now the localhost hostname
    instead of the hostname of the remote host.
    This bug has been in XINS since version 0.203.
  - Removed Dutch Logdoc translations.

* XINS/Java Common Library:
  - Cleaned up and improved Logdoc.
  - Fixed SF.net bug #1049850 ("FileWatcher thread dies if listener throws an
    exception"). This bug has been in XINS since the introduction of the
    FileWatcher class, in XINS 0.121 (initially in the package
    org.xins.util.io).
  - Added the possibility to use the HTTPServiceCaller without parameters.